objects/Seismic_Product_Type__c.object
<CustomObject>
    <fields>
        <fullName>No_ProductType_FundingType__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Product And Funding Types</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_ProductTypes__c</fullName>
        <label># Product Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Quote_Lines__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Quote Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Seismic Product Types</relationshipLabel>
        <relationshipName>Seismic_Product_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seismic_Funding_Type__c</fullName>
        <label>Seismic Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>ASO/FI</fullName>
                    <isActive>false</isActive>
                    <label>ASO/FI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seismic_Product_Type__c</fullName>
        <label>Seismic Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Act Wise</fullName>
                </value>
                <value>
                    <fullName>Short Term Disability</fullName>
                </value>
                <value>
                    <fullName>Long Term Disability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seismic_QLI_Rollup_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seismic QLI Rollup Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seismic_Quoted_Funding_Type__c</fullName>
        <formula>If (  No_ProductType_FundingType__c  &gt;0 , TEXT(Seismic_Funding_Type__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seismic Quoted Funding Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seismic_Quoted_Product_Type__c</fullName>
        <formula>If (  No_ProductType_FundingType__c  &gt;0 ,  TEXT(Seismic_Product_Type__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seismic Quoted Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seismic_Upsell_Funding_Type__c</fullName>
        <formula>if( or( No_ProductType_FundingType__c = 0, ISBLANK(No_ProductType_FundingType__c)), TEXT(Seismic_Funding_Type__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZZZ Delete Seismic Upsell Funding Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seismic_Upsell_Product_Type__c</fullName>
        <formula>if(  or(  No_ProductTypes__c  = 0, ISBLANK(No_ProductTypes__c)),  TEXT(Seismic_Product_Type__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seismic Upsell Product Type</label>
        <type>Text</type>
    </fields>
    <label>Seismic Product Type</label>
    <nameField>
        <displayFormat>SPT-{00000}</displayFormat>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seismic Product Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>